fix the layout bug

--- a/src/pages/Clinic/ClinicalCase/ClinicalCase.module.scss
+++ b/src/pages/Clinic/ClinicalCase/ClinicalCase.module.scss
@@ -8,7 +8,7 @@
     display: grid;
 
     .title {
-      margin-bottom: 8px;
+      margin: 0 32px 8px 0;
       font-weight: 700;
       font-size: 20px;
       line-height: 24px;
